--- a/templates/_singles/contact.twig
+++ b/templates/_singles/contact.twig
@@ -3,17 +3,20 @@
 {% set profileImage = entry.image.one() %}
 
 {% block content %}
-  <h1>{{ entry.title }}</h1>
+  <section aria-labelledby="contact-title">
+    <h1 id="contact-title">{{ entry.title }}</h1>
 
   <div class="about">
     {% if profileImage %}
-      <div class="photo">
-        {{ profileImage.getImg() }}
-      </div>
+      {% set altText = profileImage.alt ?? entry.title ~ ' portrait' %}
+      <figure class="photo">
+        <img src="{{ profileImage.url }}" alt="{{ altText }}">
+      </figure>
     {% endif %}
 
     <div class="bio">
       {{ entry.bio | md }}
     </div>
   </div>
+  </section>
 {% endblock %}
