--- a/templates/gallery.twig
+++ b/templates/gallery.twig
@@ -1,32 +1,32 @@
 {% extends '_layout' %}
 
 {% block content %}
-  <section aria-labelledby="gallery-title">
-    <h1 id="gallery-title">{{ entry.title }}</h1>
+  <section aria-labelledby="gallery-title" class="space-y-6">
+    <h1 id="gallery-title" class="page-title">{{ entry.title }}</h1>
 
-  {% set photos = craft.entries()
-    .section(entry.title)
-    .status('live')
-    .orderBy('postDate desc')
-    .all()
-  %}
+    {% set photos = craft.entries()
+      .section(entry.title)
+      .status('live')
+      .orderBy('postDate desc')
+      .all()
+    %}
 
-    <ul class="grid" role="list">
+    <ul class="grid gap-4 sm:grid-cols-2 lg:grid-cols-3" role="list">
       {% for photo in photos %}
         {% set img = photo.image.one() %}
         {% if img %}
           {% set altText = img.alt ?? photo.title %}
 
-          <li>
-            {% if photo.url %}
-              <a class="tile" href="{{ photo.url }}">
-                <img src="{{ img.url }}" alt="{{ altText }}">
-              </a>
-            {% else %}
-              <div class="tile">
-                <img src="{{ img.url }}" alt="{{ altText }}">
-              </div>
-            {% endif %}
+          <li class="card p-0">
+            <div class="aspect-[4/5] overflow-hidden rounded-lg">
+              {% if photo.url %}
+                <a class="block h-full w-full focus-visible:outline-none focus-visible:ring focus-visible:ring-brand/50" href="{{ photo.url }}">
+                  <img class="h-full w-full object-cover" src="{{ img.url }}" alt="{{ altText }}" loading="lazy">
+                </a>
+              {% else %}
+                <img class="h-full w-full object-cover" src="{{ img.url }}" alt="{{ altText }}" loading="lazy">
+              {% endif %}
+            </div>
           </li>
         {% endif %}
       {% endfor %}
